--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio-website",
+  "homepage": "https://sketchius.github.io/portfolio-website/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
