Add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-website",
-  "homepage": "http://http://sketchius.github.io/portfolio-website",
+  "homepage": "http://sketchius.github.io/portfolio-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
